[gd_scene load_steps=7 format=3 uid="uid://cm8liyduh3vls"]

[ext_resource type="Script" path="res://MenuLayer.gd" id="1_04j0d"]
[ext_resource type="FontFile" uid="uid://d4kj5gy3i1div" path="res://jabjai_heavy.TTF" id="2_cuv6y"]

[sub_resource type="Animation" id="Animation_6l206"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -1152)]
}

[sub_resource type="Animation" id="Animation_uhdl7"]
resource_name = "transIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -1152), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_5ghpw"]
resource_name = "transOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 1153)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v0dvl"]
_data = {
"RESET": SubResource("Animation_6l206"),
"transIn": SubResource("Animation_uhdl7"),
"transOut": SubResource("Animation_5ghpw")
}

[node name="MenuLayer" type="CanvasLayer"]
process_mode = 3
offset = Vector2(0, -1152)
transform = Transform2D(1, 0, 0, 1, 0, -1152)
script = ExtResource("1_04j0d")
metadata/_edit_horizontal_guides_ = []

[node name="MenuAnim" type="AnimationPlayer" parent="."]
speed_scale = 5.0
libraries = {
"": SubResource("AnimationLibrary_v0dvl")
}

[node name="PanelMenu" type="Panel" parent="."]
offset_left = 32.0
offset_top = 85.0
offset_right = 622.0
offset_bottom = 861.0

[node name="CloseMenu" type="Button" parent="."]
offset_left = 484.0
offset_top = 101.0
offset_right = 608.0
offset_bottom = 169.0
theme_override_font_sizes/font_size = 30
text = "Close"

[node name="Label" type="Label" parent="."]
offset_left = 86.0
offset_top = 193.0
offset_right = 576.0
offset_bottom = 265.0
theme_override_font_sizes/font_size = 50
text = "Background Volume"

[node name="HSliderBG" type="HSlider" parent="Label"]
layout_mode = 0
offset_left = 23.0
offset_top = -12.0
offset_right = 450.0
offset_bottom = 190.0
min_value = -30.0
max_value = 0.0
tick_count = 3

[node name="ResetGame" type="Button" parent="."]
offset_left = 180.0
offset_top = 719.0
offset_right = 477.0
offset_bottom = 796.0
theme_override_font_sizes/font_size = 50
text = "Reset Game"

[node name="QuitGame" type="Button" parent="."]
offset_left = 179.0
offset_top = 606.0
offset_right = 476.0
offset_bottom = 683.0
theme_override_font_sizes/font_size = 50
text = "Quit Game"

[node name="Label2" type="Label" parent="."]
offset_left = 153.0
offset_top = 329.0
offset_right = 493.0
offset_bottom = 401.0
theme_override_font_sizes/font_size = 50
text = "Game Volume"

[node name="HSliderGame" type="HSlider" parent="Label2"]
layout_mode = 0
offset_left = -47.0
offset_top = -13.0
offset_right = 380.0
offset_bottom = 189.0
min_value = -30.0
max_value = 0.0
tick_count = 3

[node name="Mute" type="Button" parent="."]
offset_left = 254.0
offset_top = 503.0
offset_right = 389.0
offset_bottom = 580.0
theme_override_font_sizes/font_size = 50
text = "Mute"

[node name="UnMute" type="Button" parent="."]
visible = false
offset_left = 208.0
offset_top = 504.0
offset_right = 428.0
offset_bottom = 581.0
theme_override_font_sizes/font_size = 50
text = "Un-Mute"

[node name="PanelLabel" type="Label" parent="."]
offset_left = 210.0
offset_top = 89.0
offset_right = 437.0
offset_bottom = 161.0
theme_override_fonts/font = ExtResource("2_cuv6y")
theme_override_font_sizes/font_size = 50
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="animation_finished" from="MenuAnim" to="." method="_on_menu_anim_animation_finished"]
[connection signal="pressed" from="CloseMenu" to="." method="_on_close_menu_pressed"]
[connection signal="value_changed" from="Label/HSliderBG" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="ResetGame" to="." method="_on_reset_game_pressed"]
[connection signal="pressed" from="QuitGame" to="." method="_on_quit_game_pressed"]
[connection signal="value_changed" from="Label2/HSliderGame" to="." method="_on_h_slider_game_value_changed"]
[connection signal="pressed" from="Mute" to="." method="_on_mute_pressed"]
[connection signal="pressed" from="UnMute" to="." method="_on_un_mute_pressed"]
